final version 14 locked - production

--- a/views/admin/email.ejs
+++ b/views/admin/email.ejs
@@ -24,13 +24,13 @@
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="groupChoice" id="radioSelected" value="radioSelected" checked>
+                    <input class="form-check-input" type="radio" name="groupChoice" id="radioSelected" value="radioSelected">
                     <label class="form-check-label" for="radioSelected">
                     Zaslat všem uživatelům, kteří neodmítli zasílání e-mailů
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="groupChoice" id="radioTest" value="radioTest">
+                    <input class="form-check-input" type="radio" name="groupChoice" id="radioTest" value="radioTest" checked>
                     <label class="form-check-label" for="radioTest">
                     Testovací e-mail (zašle jen na pravnicime@gmail.com)
                     </label>
