--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="row px-lg-5 px-2">
                 <div class="col-12 col-lg-3 price-table-wrapper p-0">
-                    <div class="card premium-plan-card m-4 mt-0">
+                    <div class="card premium-plan-card m-4 mt-0 colorB">
                         <div class="card-header">
                             <div>
                                 <p class="card-header-title">Start</p>
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                         <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
-                            <div class="price-tag-inner colorB">
+                            <div class="price-tag-inner">
                                 <span class="price">0 Kč</span> / <span class="period">napořád</span>
                             </div>
                         </div> 
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3 mt-5 mt-lg-0 price-table-wrapper p-0">
-                    <div class="card premium-plan-card m-4 mt-0">
+                    <div class="card premium-plan-card m-4 mt-0 colorB">
                         <div class="card-header">
                             <div>
                                 <p class="card-header-title">Premium</p>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
-                            <div class="price-tag-inner colorB">
+                            <div class="price-tag-inner ">
                                 <span class="price">199 Kč</span> / <span class="period">měsíčně</span>
                             </div>
                         </div> 
@@ -178,7 +178,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3 mt-5 mt-lg-0 price-table-wrapper p-0">
-                    <div class="card premium-plan-card m-4 mt-0">
+                    <div class="card premium-plan-card m-4 mt-0 colorB">
                         <div class="card-header">
                             <div>
                                 <p class="card-header-title">Premium</p>
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                         <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
-                            <div class="price-tag-inner colorB">
+                            <div class="price-tag-inner">
                                 <span class="price">1 490 Kč</span> / <span class="period">ročně</span>
                             </div> 
                         </div>
