--- a/public/css/premium.css
+++ b/public/css/premium.css
@@ -1,5 +1,9 @@
 .colorA {
-    background-color: rgba(230, 15, 133, 0.1);
+    background-color: rgba(230, 15, 133, 0.23);
+}
+
+.colorB {
+    background-color: rgba(230, 15, 133, 0.08);
 }
 
 
@@ -77,16 +81,8 @@
 
 .premium-plan-card {
     transition: all 0.3s;
-    border: 1px solid #EEEEEE;
+    border: 1px solid #E80F88;
     width: 280px;
-}
-
-.premium-plan-card:hover {
-    border: 1px solid #E80F88
-}
-
-.premium-plan-card:hover .custom-hr {
-    background-color: #E80F88
 }
 
 .premium-recomended {
@@ -127,7 +123,7 @@
 .custom-hr {
     border: none;
     height: 1px!important;
-    background-color: #EEEEEE;  /* Modern Browsers */
+    background-color: #E80F88;  /* Modern Browsers */
     opacity: 1;
     border-radius: 10px;
   }
