--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -38,7 +38,7 @@
 
 <body class="d-flex flex-column vh-100">
   <%- include('../partials/navbar') %>
-    <nav class="navbar bg-white" style="border-bottom: 1px solid #EEEEEE;">
+    <nav class="navbar bg-white" style="border-bottom: 1px solid #EEEEEE;" id="card-nav">
       <div class="container">
         <ul class="navbar-nav">
           <li><a href="/category/<%= card.category %>" class="back-link"><i
