isFirstStar logic and warning

--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -51,6 +51,9 @@
         </ul>
       </div>
     </nav>
+    <div id="warning-div">
+      
+    </div>
     <main class="container mt-md-5 p-4" id="main-container">
       <div class="row">
 
