isFirstStar logic and warning

--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -51,10 +51,9 @@
         </ul>
       </div>
     </nav>
-    <div id="warning-div">
-      
-    </div>
+
     <main class="container mt-md-5 p-4" id="main-container">
+      <div id="warning-div" style="width:100%;margin-top:1rem"><!--Placeholder for warning alert--></div>
       <div class="row">
 
         <!--PROGRESS STATUS MOBILE-->
