--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -85,6 +85,11 @@
     font-weight: 500;
 }
 
+.vybrat-predmet {
+    border-radius: 0;
+    border-top: none;
+}
+
 .orange-shadow {
     box-shadow: 0 .3rem 0.5rem rgba(232, 15, 136, 0.8);
     border: 1px solid rgba(232, 15, 136, 0.4);;
@@ -374,6 +379,10 @@ form .form-control, .form-select {
 
     .profile-card {
         font-size: smaller; 
+    }
+
+    .vybrat-predmet {
+        border: none;
     }
   }
 
