uprava textu na temer 1 500 karticek

--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
                     <h1 class="mb-4">Naše balíčky</h1>
-                    <p class="fs-5">Většina obsahu aplikace InLege je dostupná zdarma s balíčkem Start. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 1 200 prémiových kartiček a další funkce.</p>
+                    <p class="fs-5">Většina obsahu aplikace InLege je dostupná zdarma s balíčkem Start. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 1 100 prémiových kartiček a další funkce.</p>
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
                             </div>
                             <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš?</b></p>
                             <ul class="text-smaller">
-                                <li>více než 1 500 kartiček</li>
+                                <li>téměř 1 500 kartiček</li>
                             </ul>
                         </div>
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
@@ -119,9 +119,10 @@
                             <div class="px-2 color-1">
                                 <hr class="custom-hr">
                             </div>
-                            <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš navíc?</b></p>
+                            <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš?</b></p>
                             <ul class="text-smaller">
-                                <li>dalších 1 200+ kartiček</li>
+                                <li>vše z balíčku Start</li>
+                                <li>dalších 1 100+ kartiček</li>
                                 <li>funkce ukládání kartiček</li>
                             </ul>
                         </div>
@@ -157,10 +158,11 @@
                             <div class="px-2 color-1">
                                 <hr class="custom-hr-recommended">
                             </div>
-                            <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš navíc?</b></p>
+                            <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš?</b></p>
                             <ul class="text-smaller">
+                                <li>vše z balíčku Start</li>
                                 <li>ušetříš 304 Kč<sup>**</sup></li>
-                                <li>dalších 1 200+ kartiček</li>
+                                <li>dalších 1 100+ kartiček</li>
                                 <li>funkce ukládání kartiček</li>
                             </ul>
                         </div>
@@ -196,10 +198,11 @@
                             <div class="px-2 color-1">
                                 <hr class="custom-hr">
                             </div>
-                            <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš navíc?</b></p>
+                            <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš?</b></p>
                             <ul class="text-smaller">
+                                <li>vše z balíčku Start</li>
                                 <li>ušetříš 898 Kč<sup>**</sup></li>
-                                <li>dalších 1 200+ kartiček</li>
+                                <li>dalších 1 100+ kartiček</li>
                                 <li>funkce ukládání kartiček</li>
                             </ul>
                         </div>
