--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -24,6 +24,9 @@
   <link rel="stylesheet" href="/css/bootstrap_customised.css">
   <link rel="stylesheet" href="/css/custom.css">
   <link rel="stylesheet" href="/css/card.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,400&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <!-- Google tag (gtag.js) -->
