--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,5 +1,9 @@
 
 
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
 .main-header {
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/bg_cover5.jpeg) no-repeat center center; 
     background-size: cover;
