--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,9 @@
     <meta property="og:title"              content="Studuj práva efektivně s InLege" />
     <meta property="og:description"        content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!" />
     <meta property="og:image"              content="https://www.inlege.cz/img/fb_sharing.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,400&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
