--- a/views/category.ejs
+++ b/views/category.ejs
@@ -59,7 +59,7 @@
                             <% } else if(currentUser.sections.includes(section._id)) { %> 
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/repeatSection" class="btn btn-sm btn-outline-danger btn-opakovat" style="float:right">Opakovat</a>
                             <% } else if (section.isUnfinished) { %> 
-                                <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/<%= section.lastSeenCard %>?continue=continue" class="btn btn-sm btn-outline-secondary btn-pokracovat" style="float:right">Pokračovat</a>
+                                <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/<%= section.lastSeenCard %>?continue=continue" class="btn btn-sm btn-outline-danger btn-pokracovat" style="float:right">Pokračovat</a>
                             <% } else { %> 
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/1" class="btn btn-sm btn-danger btn-spustit" style="float:right">Spustit</a>
                             <% } %>
@@ -125,7 +125,7 @@
                                 <% } else if(currentUser.sections.includes(section._id)) { %> 
                                     <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/repeatSection" class="btn btn-sm btn-outline-danger btn-opakovat" style="float:right">Opakovat</a>
                                 <% } else if (section.isUnfinished) { %> 
-                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/<%= section.lastSeenCard %>?continue=continue" class="btn btn-sm btn-outline-secondary btn-pokracovat" style="float:right">Pokračovat</a>
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/<%= section.lastSeenCard %>?continue=continue" class="btn btn-sm btn-outline-danger btn-pokracovat" style="float:right">Pokračovat</a>
                                 <% } else { %> 
                                     <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/1" class="btn btn-sm btn-danger btn-spustit" style="float:right">Spustit</a>
                                 <% } %>
