--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -55,6 +55,15 @@
             <hr>
             <div class="row">
                 <div class="col-md-10">
+                    <p>Počet uživatelů neodebírajících e-maily</p>
+                </div>
+                <div class="col-md-2">
+                    <%= unsubscribedUsersCount %>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-md-10">
                     <p>Demo limit zobrazen</p>
                 </div>
                 <div class="col-md-2">
