--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
     <div class="container">
-      <a class="navbar-brand fs-4 p-0" href="/"><img src="/favicon.ico" alt="" width="30" height="30"> InLege</a>
+      <a class="navbar-brand fs-4 p-0" href="/"><img src="/favicon.ico" alt="" width="30" height="30"> <%= texts.general.projectName %></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
