--- a/views/premiumXmas.ejs
+++ b/views/premiumXmas.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>InLege - Studuj práva efektivně</title>
+        <title>Vánoce s InLege</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="/css/custom.css">
         <link rel="stylesheet" href="/css/landing.css">
         <link rel="stylesheet" href="/css/premium.css">
+        <link rel="stylesheet" href="/css/premiumXmas.css">
         <!-- META TAGS -->
         <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
         <meta name="author"                    content="Chilero s. r. o.">
@@ -57,7 +58,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
-                    <h1 class="mb-4">Naše balíčky</h1>
+                    <h1 class="mb-4">Naše vánoční balíčky -50 %</h1>
                     <p class="fs-5">Většina obsahu aplikace InLege je dostupná zdarma s balíčkem Free. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 1 100 prémiových kartiček a další funkce.</p>
                 </div>
             </div>
