--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -55,6 +55,14 @@
             <hr>
             <div class="row">
                 <div class="col-md-10">
+                    <p>Počet nastudovaných kartiček</p>
+                </div>
+                <div class="col-md-2">
+                    <%= totalCardsSeen %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-10">
                     <p>Počet uživatelů neodebírajících e-maily</p>
                 </div>
                 <div class="col-md-2">
@@ -88,7 +96,7 @@
             </div>
             </div>
         </div>
-        <div class="col-md-3 mb-3 pt-3">
+        <div class="col-md-4 mb-3 pt-3">
             <div class="card stats p-3">
                 <h5 class="mb-3">Fakulty</h5>
                 <div class="row">
@@ -218,8 +226,11 @@
             <h5>Registrovaní uživatelé</h5>
         </div>
     </div>
-    <% for(let user of users){ %> 
+    <% users.forEach((user, i) => { %> 
         <div class="row text-smaller">
+            <div class="col-sm-1 d-flex justify-content-between align-items-start">
+                <p><%= users.length - i %></p>
+            </div>
             <div class="col-sm-2 d-flex justify-content-between align-items-start">
                 <p class="mb-0"><%= user.email %></p>
                 <% if (user.activeInLast48Hours) { %>
@@ -250,15 +261,8 @@
                 <div class="col-sm-1 d-flex justify-content-center align-items-center">
                     <a href="/admin/<%=user._id%>/showDetail" class="btn btn-sm btn-danger">Detail</a>
                 </div>
-                <div class="col-sm-2 d-flex justify-content-center align-items-center">
-                    <% if (!user.isEditor) { %>
-                        <form action="/admin/<%= user._id %>/makeEditor" method="POST"><button class="btn btn-sm btn-info">Make editor</button></form>
-                    <% } else { %>
-                    <form action="/admin/<%= user._id %>/removeEditor" method="POST"><button class="btn btn-sm btn-outline-info">Remove editor</button></form>
-                    <% } %>
-                </div>
             <% } %>
             <hr>
         </div>
-    <% } %> 
+    <% }) %> 
 </div>
