--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
     <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/headerBackground.<%= texts.general.projectName %>.css">
     <link rel="stylesheet" href="/css/landing.css">
     <!-- META TAGS -->
     <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
@@ -45,18 +46,8 @@
           <div class="container">
               <div class="row">
                   <div class="col-md-5 offset-md-1 my-5 p-4">
-                    <h1 class="jumbotron-heading mb-3">Studuj práva efektivně s <span class="color-1">InLege</span>!</h1>
-                    <p class="lead">Pusť se do studia práv s více než dvěma tisíci kartiček s otázkami a odpověďmi, nabízejících skvělou interaktivní přípravu na zkoušky.</p>        
-                   <!-- <p>Pusť se do studia práv s více než dvěma tisíci kartiček s otázkami a odpověďmi, nabízejících skvělou interaktivní přípravu na zkoušky. S InLege získáš více než jen aplikaci - získáš společenství, které ti pomůže otevřít dveře k úspěšné právnické kariéře.</p>
-                    <h2>Proč Studovat s InLege?</h2>
-                    <ul>
-                        <li><strong>Unikátní Přístup:</strong> Zkušenosti absolventů práv přetavené do více než 2 500 interaktivních otázek a odpovědí.</li>
-                        <li><strong>Připraven na Vše:</strong> Efektivní příprava na zkoušky, nezávisle na fázi tvého studia či profesního růstu.</li>
-                        <li><strong>Širší Společenství:</strong> InLege není jen o kartičkách. Je to komunita mladých právníků, kteří se podporují na cestě k úspěchu.</li>
-                        <li><strong>Dostupné pro Všechny:</strong> Věříme, že kvalitní studijní materiály by měly být dostupné pro každého. Alespoň 50 % obsahu InLege je vždy zdarma!</li>
-                    </ul>
-                    <p>Přidej se k nám a udělej krok k efektivnějšímu a úspěšnějšímu studiu práv s InLege!</p>
-                -->
+                    <h1 class="jumbotron-heading mb-3"><%= texts.landingPage.mainTitleStart %> <span class="color-1"><%= texts.general.projectName %></span>!</h1>
+                    <p class="lead"><%= texts.landingPage.headerStatement %></p>        
                     <div class="mt-5 text-center-on-mobile">
                         <% if(!currentUser){ %> 
                             <a href="/auth/user/new" class="btn btn-lg btn-danger call-to-action">Studuj zdarma</a>
@@ -180,7 +171,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
                     <h1 class="mb-4">Naše vize</h1>
-                    <p class="fs-5">Mladí právníci se neustále potýkají se zkouškami, ať už na právnické fakultě nebo v průběhu dalšího profesního vzdělávání po jejím absolvování. Jsme si vědomi této náročné cesty, proto jsme vytvořili nástroj, který bychom sami v době našich studií ocenili. S radostí vám představujeme <strong class="color-1">InLege</strong>, inovativní webovou aplikaci nejen pro studenty práv.</p>
+                    <p class="fs-5"><%= texts.landingPage.visionStatementStart %> <strong class="color-1"><%= texts.general.projectName %></strong><%= texts.landingPage.visionStatementEnd %></p>
                 </div>
             </div>
         </div>
@@ -189,20 +180,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 offset-md-1 my-5">
-                    <h1 class="mb-5 text-center">Proč používat InLege?</h1>
+                    <h1 class="mb-5 text-center">Proč používat <%= texts.general.projectName %>?</h1>
                     <div class="row">
                         <div class="col-lg-6 mb-3">
                             <div class="reason">
                                 <div class="row">
                                     <div class="col-4 d-flex justify-content-center align-items-center">
                                         <div class="rounded-circle reason-icon-background d-flex justify-content-center align-items-center">
-                                            <img src="/img/icon-reason-1.png" class="img-fit" alt="" />
+                                            <img src="/img/<%= texts.landingPage.reasonOneIcon %>" class="img-fit" alt="" />
                                         </div>
                                     </div>
                                     <div class="col-8">
                                         <div class="ml-3">
-                                            <h5 class="reason-title">Unikátní přístup</h5>
-                                            <p class="reason-content">Zkušenosti absolventů práv přetavené do více než 2 500 interaktivních otázek a odpovědí.</p>
+                                            <h5 class="reason-title"><%= texts.landingPage.reasonOneHeader %></h5>
+                                            <p class="reason-content"><%= texts.landingPage.reasonOneContent %></p>
                                         </div>
                                     </div>
                                     
@@ -214,13 +205,13 @@
                                 <div class="row">
                                     <div class="col-4 d-flex justify-content-center align-items-center">
                                         <div class="rounded-circle reason-icon-background d-flex justify-content-center align-items-center">
-                                            <img src="/img/icon-reason-2.png" class="img-fit" alt="" />
+                                            <img src="/img/<%= texts.landingPage.reasonTwoIcon %>" class="img-fit" alt="" />
                                         </div>
                                     </div>
                                     <div class="col-8">
                                         <div class="ml-3">
-                                            <h5 class="reason-title">Připraví tě na vše</h5>
-                                            <p class="reason-content">Efektivní příprava na zkoušky, nezávisle na fázi tvého studia či profesního růstu.</p>
+                                            <h5 class="reason-title"><%= texts.landingPage.reasonTwoHeader %></h5>
+                                            <p class="reason-content"><%= texts.landingPage.reasonTwoContent %></p>
                                         </div>
                                     </div>
                                     
@@ -232,13 +223,13 @@
                                 <div class="row">
                                     <div class="col-4 d-flex justify-content-center align-items-center">
                                         <div class="rounded-circle reason-icon-background d-flex justify-content-center align-items-center">
-                                            <img src="/img/icon-reason-3.png" class="img-fit" alt="" />
+                                            <img src="/img/<%= texts.landingPage.reasonThreeIcon %>" class="img-fit" alt="" />
                                         </div>
                                     </div>
                                     <div class="col-8">
                                         <div class="ml-3">
-                                            <h5 class="reason-title">Širší společenství</h5>
-                                            <p class="reason-content">InLege není jen o kartičkách. Chceme budovat komunitu mladých právníků, kteří se podporují na cestě k úspěchu.</p>
+                                            <h5 class="reason-title"><%= texts.landingPage.reasonThreeHeader %></h5>
+                                            <p class="reason-content"><%= texts.landingPage.reasonThreeContent %></p>
                                         </div>
                                     </div>
                                     
@@ -250,13 +241,13 @@
                                 <div class="row">
                                     <div class="col-4 d-flex justify-content-center align-items-center">
                                         <div class="rounded-circle reason-icon-background d-flex justify-content-center align-items-center">
-                                            <img src="/img/icon-reason-4.png" class="img-fit" alt="" />
+                                            <img src="/img/<%= texts.landingPage.reasonFourIcon %>" class="img-fit" alt="" />
                                         </div>
                                     </div>
                                     <div class="col-8">
                                         <div class="ml-3">
-                                            <h5 class="reason-title">Dostupné pro všechny</h5>
-                                            <p class="reason-content">Věříme, že kvalitní studijní materiály by měly být dostupné pro každého. Alespoň 50 % obsahu InLege je vždy zdarma!</p>
+                                            <h5 class="reason-title"><%= texts.landingPage.reasonFourHeader %></h5>
+                                            <p class="reason-content"><%= texts.landingPage.reasonFourContent %></p>
                                         </div>
                                     </div>
                                     
