--- a/views/legal/contact.ejs
+++ b/views/legal/contact.ejs
@@ -17,6 +17,13 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold">
+                        <p>Instagram</p>
+                    </div>
+                    <div class="col-8">
+                        <p><a href="https://www.instagram.com/inlege">@InLege</a></p>
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold">
                         <p>E-mail</p>
                     </div>
                     <div class="col-8">
