--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -5,6 +5,7 @@ body {
 }
 
 .main-header {
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/bg_cover5.jpeg) no-repeat center center; 
     background-size: cover;
     min-height: 450px;
     color: white;
