--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -140,7 +140,7 @@
                                 <a href="#" class="btn btn-danger my-3 disabled w-100">Je aktivní balíček Premium</a> 
                             <% } %>
                         </div>
-                        <% if (currentUser.premiumGrantedByAdmin) { %>
+                        <% if (currentUser && currentUser.premiumGrantedByAdmin) { %>
                             <div>
                                 <p class="text-muted text-center" style="font-size: 0.8rem;">Tvé předplatné bylo nastaveno administrátorem. Přepnout na placenou verzi můžeš <a href="#" id="checkout-button-monthly">zde</a>.</p> 
                             </div>
@@ -212,7 +212,7 @@
                                 <a href="#" class="btn btn-danger my-3 disabled w-100">Je aktivní balíček Premium</a> 
                             <% } %>
                         </div>
-                        <% if (currentUser.premiumGrantedByAdmin) { %>
+                        <% if (currentUser && currentUser.premiumGrantedByAdmin) { %>
                             <div>
                                 <p class="text-muted text-center" style="font-size: 0.8rem;">Tvé předplatné bylo nastaveno administrátorem. Přepnout na placenou verzi můžeš <a href="#" id="checkout-button-halfyear">zde</a>.</p> 
                             </div>
@@ -293,7 +293,7 @@
                                 <a href="#" class="btn btn-danger my-3 disabled w-100">Je aktivní balíček Premium</a> 
                             <% } %>
                         </div>
-                        <% if (currentUser.premiumGrantedByAdmin) { %>
+                        <% if (currentUser && currentUser.premiumGrantedByAdmin) { %>
                             <div>
                                 <p class="text-muted text-center" style="font-size: 0.8rem;">Tvé předplatné bylo nastaveno administrátorem. Přepnout na placenou verzi můžeš <a href="#" id="checkout-button-yearly">zde</a>.</p> 
                             </div>
