--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -82,7 +82,7 @@
                         <p class="text-center monthly-equivalent" style="opacity: 0">(0 Kč za měsíc<sup>*</sup>)</p>
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
-                                <a href="/auth/user/new" class="btn btn-warning my-3 w-100" style="background-color:#F7FAFC;border:1px solid #D3D7E1">Zaregistrovat se a aktivovat</a> 
+                                <a href="/auth/user/new" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
                             <% } %>
                             <% if (currentUser && !currentUser.isPremium) { %>
                                 <a href="#" id="checkout-button-freemium" class="btn btn-danger my-3 disabled w-100" style="min-width:115px">Balíček Free je aktivní</a> 
