--- a/views/admin/email.ejs
+++ b/views/admin/email.ejs
@@ -28,6 +28,11 @@
                     <label class="form-check-label" for="radioSelected">
                     Zaslat všem uživatelům, kteří neodmítli zasílání e-mailů
                     </label>
+                </div><div class="form-check">
+                    <input class="form-check-input" type="radio" name="groupChoice" id="radioFree" value="radioFree">
+                    <label class="form-check-label" for="radioFree">
+                    Zaslat všem Free uživatelům, kteří neodmítli zasílání e-mailů (+ Premium by Admin)
+                    </label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="groupChoice" id="radioTest" value="radioTest" checked>
