--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -92,7 +92,7 @@
                 <div class="row height-100 demo-finished-card">
                   <div class="col-12 d-flex flex-column justify-content-center align-items-center ">
                       <p class="demo-finished-main text-center mb-4">Již si vyčerpal/a svých 5 ukázkových kartiček.</p>
-                      <p class="demo-finished-text text-center text-smaller text-muted mt-3 mb-4">Teď už víš, jak InLege funguje. Vytvoř si účet a získej přístup k dalším <b>téměř 1 500 kartičkám</b>. Je to zdarma!</p>
+                      <p class="demo-finished-text text-center text-smaller text-muted mt-3 mb-4">Teď už víš, jak InLege funguje. Vytvoř si účet a získej přístup k dalším <b>více než 1 800 kartičkám</b>. Je to zdarma!</p>
                       <a href="/auth/user/new" class="btn btn-lg btn-danger my-3">Vytvořit účet zdarma</a>
                   </div>
                 </div>
